--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,10 @@ body {
   grid-template-columns: 33% 67%;
 }
 
+/**********/
+/* Header */
+/**********/
+
 #header-area {
   background-color: white;
   display: flex;
@@ -23,7 +27,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 5rem;
+  height: 120px;
 }
 #header-area #header-content {
   display: flex;
@@ -37,17 +41,27 @@ body {
   z-index: 50;
 }
 #header-grid {
+  background: linear-gradient(
+    90deg,
+    rgba(132, 49, 166, 0.4) 0%,
+    rgba(255, 127, 80, 0.4) 100%
+  );
   position: absolute;
   width: 100%;
   height: 100%;
   overflow: hidden;
   display: grid;
-  grid-template-columns: repeat(50, 1fr);
+  grid-template-columns: repeat(100, 1fr);
 }
 .header-grid-square {
   border-radius: 5px;
   width: 20px;
   height: 20px;
+  border: 1px solid #ffffff00;
+  /* border-radius: 5px; */
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  margin: 1px;
 }
 @keyframes fadeIn {
   0% {
@@ -72,19 +86,19 @@ body {
   animation: fadeOut 1000ms;
 }
 .grid-square-active-1 {
-  /* background-color: #7fffd433; */
-  background: white;
-  background: radial-gradient(circle, #7fffd455 0%, white 75%, white 100%);
+  background: radial-gradient(circle, #ffffff55 0%, #7fffd455 100%);
+  /* border: 1px solid #7fffd4cc; */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 .grid-square-active-2 {
-  /* background-color: #00ffff33; */
-  background: white;
-  background: radial-gradient(circle, #00ffff55 0%, white 75%, white 100%);
+  background: radial-gradient(circle, #ffffff55 0%, #00ffff55 100%);
+  /* border: 1px solid #00ffff99; */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 .grid-square-active-0 {
-  /* background-color: #e681de33; */
-  background: white;
-  background: radial-gradient(circle, #e681de55 0%, white 75%, white 100%);
+  background: radial-gradient(circle, #ffffff55 0%, #e681de55 100%);
+  /* border: 1px solid #e681de99; */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 
 #header-area .name {
@@ -94,19 +108,25 @@ body {
   font-size: 1rem;
 }
 
+.life-init-button {
+  z-index: 100;
+}
+
+/********/
+/* Menu */
+/********/
+
 #menu-area {
   background-color: beige;
   height: 25%;
   position: sticky;
-
-  top: 5rem;
+  top: 120px;
 }
 #menu-area ul {
   padding: 0;
 }
 #menu-area ul li {
   background-color: aliceblue;
-  /* border-top: 1px solid grey; */
   list-style: none;
   margin: 0.5rem 1rem;
 }
@@ -122,8 +142,7 @@ body {
 }
 
 #sections-area {
-  /* background-color: burlywood; */
   border: 1px solid grey;
   height: 2000px;
-  margin-top: 5rem;
+  margin-top: 120px;
 }
