projects page mostly done

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,32 @@
+@import url("https://fonts.googleapis.com/css2?family=Bitter&family=Montserrat&display=swap");
+
+:root {
+  --main-palette-color: #778ccc;
+  --solarized-base03: #002b36;
+  --solarized-base02: #073642;
+  --solarized-base01: #586e75;
+  --solarized-base00: #657b83;
+  --solarized-base0: #839496;
+  --solarized-base1: #93a1a1;
+  --solarized-base2: #eee8d5;
+  --solarized-base3: #fdf6e3;
+  --solarized-yellow: #b58900;
+  --solarized-orange: #cb4b16;
+  --solarized-red: #dc322f;
+  --solarized-magenta: #d33682;
+  --solarized-violet: #6c71c4;
+  --solarized-violet-faded: #6c71c433;
+  --solarized-blue: #268bd2;
+  --solarized-blue-faded: #268bd233;
+  --solarized-cyan: #2aa198;
+  --solarized-cyan-faded: #2aa19833;
+  --solarized-green: #859900;
+}
+
 body {
+  /* background-color: var(--solarized-base02); */
+  /* background: url("../img/squairy_light.png"); */
+  background-color: #ffffff;
   padding: 0;
   margin: 0;
 }
@@ -13,7 +41,7 @@ body {
 }
 #main-columns {
   display: grid;
-  grid-template-columns: 33% 67%;
+  grid-template-columns: 25% 75%;
 }
 
 /**********/
@@ -21,31 +49,34 @@ body {
 /**********/
 
 #header-area {
-  background-color: white;
+  /* background-color: var(--solarized-base02); */
+  background-color: #ffffff;
   display: flex;
+  font-family: "Montserrat", sans-serif;
   justify-content: center;
   position: fixed;
   top: 0;
   width: 100%;
   height: 120px;
 }
-#header-area #header-content {
+#header-content-container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   max-width: 1000px;
-  /* padding-left: 1rem; */
   width: 100%;
 }
 #header-content {
+  background-color: var(--solarized-blue);
+  color: var(--solarized-base02);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  padding: 0 1rem;
   z-index: 50;
 }
 #header-grid {
-  background: linear-gradient(
-    90deg,
-    rgba(132, 49, 166, 0.4) 0%,
-    rgba(255, 127, 80, 0.4) 100%
-  );
+  /* background: url("../img/squairy_light.png"); */
   position: absolute;
   width: 100%;
   height: 100%;
@@ -57,8 +88,7 @@ body {
   border-radius: 5px;
   width: 20px;
   height: 20px;
-  border: 1px solid #ffffff00;
-  /* border-radius: 5px; */
+  border: 1px solid #66666611;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   margin: 1px;
@@ -71,54 +101,65 @@ body {
     opacity: 1;
   }
 }
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+.grid-square-enter {
+  animation: fadeIn 500ms;
 }
 .grid-square-active {
-  animation: fadeIn 1000ms;
-}
-.grid-square-inactive {
-  animation: fadeOut 1000ms;
-}
-.grid-square-active-1 {
-  background: radial-gradient(circle, #ffffff55 0%, #7fffd455 100%);
-  /* border: 1px solid #7fffd4cc; */
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-}
-.grid-square-active-2 {
-  background: radial-gradient(circle, #ffffff55 0%, #00ffff55 100%);
-  /* border: 1px solid #00ffff99; */
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 .grid-square-active-0 {
-  background: radial-gradient(circle, #ffffff55 0%, #e681de55 100%);
-  /* border: 1px solid #e681de99; */
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  background: var(--solarized-blue-faded);
+}
+.grid-square-active-1 {
+  background: var(--solarized-cyan-faded);
+}
+.grid-square-active-2 {
+  background: var(--solarized-violet-faded);
 }
 
 #header-area .name {
-  font-size: 2rem;
+  font-size: 2.3rem;
 }
 #header-area .subname {
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
-
+#reset-button-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+#reset-button-container div {
+  display: flex;
+}
 .life-init-button {
+  background-color: var(--solarized-blue);
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 5px;
   z-index: 100;
 }
+/* .life-init-link {
+  background-color: #6b89e1;
+  border: none;
+  color: black;
+  padding: 5px;
+  text-decoration: none;
+  z-index: 100;
+} */
 
 /********/
 /* Menu */
 /********/
 
 #menu-area {
-  background-color: beige;
+  font-family: "Montserrat", sans-serif;
   height: 25%;
+  padding-top: 2rem;
+  padding-left: 0;
   position: sticky;
   top: 120px;
 }
@@ -126,23 +167,112 @@ body {
   padding: 0;
 }
 #menu-area ul li {
-  background-color: aliceblue;
+  /* background-color: var(--solarized-base03); */
+  border: 1px solid var(--solarized-blue);
   list-style: none;
-  margin: 0.5rem 1rem;
+  margin: 0.5rem 1rem 0.5rem 0;
+  transition: background-color 100ms ease-in;
+}
+#menu-area ul li:hover {
+  background-color: var(--solarized-blue-faded);
 }
 #menu-area ul li button {
   background-color: inherit;
   border: none;
-  font-size: 1.5rem;
+  color: var(--solarized-base02);
+  font-family: inherit;
+  font-size: 1.4rem;
+  padding: 0.5rem 0;
   width: 100%;
 }
 
 #menu-area ul li.selected {
-  background-color: cadetblue;
+  background-color: var(--solarized-blue);
+  color: black;
 }
 
 #sections-area {
-  border: 1px solid grey;
+  color: var(--solarized-base02);
+  font-family: "Bitter", serif;
   height: 2000px;
   margin-top: 120px;
+  padding-top: 2rem;
+}
+
+/*********/
+/* About */
+/*********/
+
+#about-section {
+}
+#self-portrait {
+  border-radius: 5px;
+  float: right;
+  margin-left: 1rem;
+  width: 300px;
+}
+#about-badges-container,
+#about-contact-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+#about-contact {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+#about-badges {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+}
+
+/************/
+/* Projects */
+/************/
+
+.project {
+  border-bottom: 1px solid var(--solarized-base00);
+  margin-bottom: 3rem;
+  padding: 0 1rem 3rem 1rem;
+}
+.project:last-of-type {
+  border-bottom: none;
+}
+.project-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+.project-title a {
+  color: var(--solarized-blue);
+  text-decoration: none;
+}
+.project-tech {
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 1rem;
+}
+.project-git {
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 1rem;
+}
+.project-imgs {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+  max-width: 100%;
+}
+.project-imgs img {
+  border: 1px solid var(--solarized-base1);
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  flex-basis: auto;
+  margin: 0 1rem;
+  max-width: 600px;
+  width: 100%;
+}
+.project-desc {
 }
