--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,10 +7,12 @@
   --solarized-base01: #586e75;
   --solarized-base00: #657b83;
   --solarized-base0: #839496;
+  --solarized-base0-trans: #83949600;
   --solarized-base1: #93a1a1;
   --solarized-base2: #eee8d5;
   --solarized-base3: #fdf6e3;
   --solarized-yellow: #b58900;
+  --solarized-yellow-trans: #b5890000;
   --solarized-orange: #cb4b16;
   --solarized-red: #dc322f;
   --solarized-magenta: #d33682;
@@ -244,26 +246,40 @@ a {
   position: relative;
 }
 #day-night-toggle {
+  border: 1px solid var(--solarized-base1);
+  border-radius: 7px;
+  background-color: inherit;
   display: flex;
+  align-items: center;
+  padding: 2px;
   position: absolute;
-  /* top: -10px; */
-  left: -50px;
+  top: -40px;
+  left: -40px;
+}
+#day-night-toggle > div {
+  background-size: 100% 100%;
+  display: flex;
+  width: 2rem;
+  height: 2rem;
+  opacity: 1;
+  transition: all 0.5s;
 }
 #day-toggle {
   background: url("../img/sun.svg");
-  background-size: 100% 100%;
-  width: 2rem;
-  height: 2rem;
+  background-color: var(--solarized-yellow);
+  border-radius: 7px;
 }
 #content.night #day-toggle {
+  background-color: var(--solarized-yellow-trans);
 }
 #night-toggle {
   background: url("../img/moon.svg");
-  background-size: 100% 100%;
-  width: 2rem;
-  height: 2rem;
+  background-color: var(--solarized-base0);
+  border-radius: 7px;
 }
 #content.day #night-toggle {
+  background-color: none;
+  background-color: var(--solarized-base0-trans);
 }
 #footer-area #day-ground {
   background: url("../img/desert-ground-day.png");
@@ -288,6 +304,7 @@ a {
   grid-row-end: 2;
   grid-template-rows: 43% 5% 21% 19% 12%;
   transition: all 2s;
+  z-index: 1;
 }
 #footer-right-day,
 #footer-right-night {
@@ -418,6 +435,9 @@ a {
   display: flex;
   justify-content: space-evenly;
   width: 50%;
+}
+#about-badges img {
+  width: 3rem;
 }
 
 /************/
